// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`native direct should have a placeholder 1`] = `
<div
  className="direct placeholder"
/>
`;

exports[`native direct should have an encrypted class 1`] = `
<div
  className="direct cls encrypted-class"
/>
`;
